fix: fix DPOR deadlock detection by making writes dependent
- Add shared 'control' field to DeadlockState
- Make DeadlockWriteFlagStep write to shared 'control' location
- This makes the two writes dependent in IndependenceRelation
- Forces DPOR to explore both write orderings
- DPOR now correctly finds DEADLOCK for deadlock program

Fixes: deadlock program now correctly returns DEADLOCK under DPOR (was PASS)

Co-authored-by: Sam <noreply@github.com>